Address Quarkus warning about missing --add-opens
Signed-off-by: nscuro <nscuro@protonmail.com>